@@ -597,7 +597,7 @@
   Values of amount over 100% are allowed but UAs must clamp the values to 100%.
   The markup equivalent of this function is <a href="#grayscaleEquivalent">given below</a>.
   <p>Negative values are not allowed.</p>
-  <p>The lacuna value for interpolation is ''1''.</p>
+  <p>The lacuna value for interpolation is ''0''.</p>
 </dd>
 
 <dt><dfn>hue-rotate( &lt;angle&gt; )</dfn></dt>
@@ -618,7 +618,7 @@
   Values of amount over 100% are allowed but UAs must clamp the values to 100%.
   The markup equivalent of this function is <a href="#invertEquivalent">given below</a>.
   <p>Negative values are not allowed.</p>
-  <p>The lacuna value for interpolation is ''1''.</p>
+  <p>The lacuna value for interpolation is ''0''.</p>
 </dd>
 <dt><dfn>opacity( &lt;number&gt; | &lt;percentage&gt; )</dfn></dt>
 <dd>
@@ -652,7 +652,7 @@
   Values of amount over 100% are allowed but UAs must clamp the values to 100%.
   The markup equivalent of this function is <a href="#sepiaEquivalent">given below</a>.
   <p>Negative values are not allowed.</p>
-  <p>The lacuna value for interpolation is ''1''.</p>
+  <p>The lacuna value for interpolation is ''0''.</p>
 </dd>
 </dl>
 
