@@ -10,7 +10,7 @@
 
   <meta content="Filter Effects 1.0" name=dcterms.title>
   <meta content=text name=dcterms.type>
-  <meta content=2013-08-05 name=dcterms.date>
+  <meta content=2013-08-13 name=dcterms.date>
   <meta content="Dean Jackson" name=dcterms.creator>
   <meta content="Erik Dahlström" name=dcterms.creator>
   <meta content="Dirk Schulze" name=dcterms.creator>
@@ -33,14 +33,14 @@
 
    <h1>Filter Effects 1.0</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 5 August 2013</h2>
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 13 August 2013</h2>
 
    <dl>
     <dt>This version:
 
     <dd> <a
      href="http://dev.w3.org/fxtf/filters/">http://dev.w3.org/fxtf/filters/</a>
-     <!--http://www.w3.org/TR/2013/WD-filters-20130805/-->
+     <!--http://www.w3.org/TR/2013/WD-filters-20130813/-->
 
     <dt>Latest version:
 
@@ -1138,7 +1138,7 @@
 
     <p>Negative values are not allowed.
 
-    <p>The lacuna value for interpolation is ‘<code class=css>1</code>’.
+    <p>The lacuna value for interpolation is ‘<code class=css>0</code>’.
 
    <dt><dfn id=hue-rotate-ltanglegt->hue-rotate( &lt;angle&gt; )</dfn>
 
@@ -1166,7 +1166,7 @@
 
     <p>Negative values are not allowed.
 
-    <p>The lacuna value for interpolation is ‘<code class=css>1</code>’.
+    <p>The lacuna value for interpolation is ‘<code class=css>0</code>’.
 
    <dt><dfn id=opacity-ltnumbergt-ltpercentagegt->opacity( &lt;number&gt; |
     &lt;percentage&gt; )</dfn>
@@ -1222,7 +1222,7 @@
 
     <p>Negative values are not allowed.
 
-    <p>The lacuna value for interpolation is ‘<code class=css>1</code>’.
+    <p>The lacuna value for interpolation is ‘<code class=css>0</code>’.
   </dl>
 
   <p> The first filter function or ‘<code class=css>filter
