@@ -2,6 +2,9 @@ Changes for Filter Effects specification
 ----------------------------------------
 
 2013-08-05  Dirk Schulze  <dschulze@adobe.com>
+- Fix initial values for interpolation on grayscale, invert and sepia.
+
+2013-08-05  Dirk Schulze  <dschulze@adobe.com>
 - Clarify lacuna values for filter shorthands.
 - Fix a bug with drop-shadow syntax.
 
